# models/User.js
@@ -1,10 +1,0 @@
-const mongoose = require('mongoose');
-
-const User = mongoose.model('User', {
-    name: String,
-    email: String,
-    password: String
-});
-
-
-module.exports = User;
